--- a/public/chat.html
+++ b/public/chat.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>ChatLounges App</title>
+    <title>ChatLounge</title>
   </head>
   <body>
     <div class="chat-container">
