--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>ChatCord App</title>
+    <title>ChatLounge</title>
   </head>
   <body>
     <div class="join-container">
@@ -33,12 +33,9 @@
           <div class="form-control">
             <label for="room">Room</label>
             <select name="room" id="room">
-              <option value="JavaScript">JavaScript</option>
-              <option value="Python">Python</option>
-              <option value="PHP">PHP</option>
-              <option value="C#">C#</option>
-              <option value="Ruby">Ruby</option>
-              <option value="Java">Java</option>
+              <option value="SecretChat">Secret Chat</option>
+              <option value="Friends">Friends</option>
+              <option value="Family">Family</option>
             </select>
           </div>
           <button type="submit" class="btn">Join Chat</button>
